--- a/udong-street/src/component/Layout/index.css
+++ b/udong-street/src/component/Layout/index.css
@@ -1,12 +1,23 @@
+#hhh{
+  height: 100%;
+  width: 100%;
+}
+#wrapper{
+  background-color: #f8f7f7;
+  height: auto;
+  min-height: 100%;
+  padding-bottom: 100px;
+}
 .footer {
-    padding:30px 0;
-    margin: 30px;
+    height: 100px;
+    padding:30px;
     border-top:1px solid #d9d9d9;
     font-size:18px;
+    position : relative;
+    transform : translateY(-100%);
     background-color:#dac3c3;
     color:rgb(22, 22, 22);
 }
-
 
 .header{
   background-color: #FFE49E;
@@ -32,4 +43,17 @@ a{
   font-size: small;
   float: right;
   padding: 10px;
+} 
+#menu-bar{
+  background-color: #f8f7f7;
+}
+
+#cardIcon{
+  width: 20px;
+  margin: 5px;
+  margin-right: 20px;
+  /* padding-right: 10px; */
+}
+#cardTitle{
+  font-weight:bold;
 }
