--- a/udong-street/src/index.css
+++ b/udong-street/src/index.css
@@ -1,3 +1,8 @@
+html, body{
+  margin:0; padding:0;
+  width: 100%;
+  height: 100%;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +15,9 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+#root{
+  margin:0; padding:0;
+  width: 100%;
+  height: 100%;
 }
