--- a/udong-street/src/component/Layout/atom/Recommendations.css
+++ b/udong-street/src/component/Layout/atom/Recommendations.css
@@ -1,5 +1,5 @@
 img{
-    width:50%;
+    width:10vw;
     margin-top:20px;
     margin-bottom: 20px;
 }
@@ -7,8 +7,12 @@ img{
     margin: 10px;
     text-align: center;
 }
+.row{
+    font-size: 50%;
+}
 #message{
     margin-top: 20px;
+    font-size: 1.5vw;
     text-align: right;
     font-weight: bold;
 }
